# voice_agent

./: .env.example  .gitignore  CLEANUP_COMPLETE.md  DEBUG_INSTRUCTIONS.md  FILES_CREATED.txt  GITHUB_SYNC_COMPLETE.md  HOW_TO_RUN.md  HOW_TO_TEST.md  IMPLEMENTATION_GUIDE.md  INSTALLATION.md  PODCAST_ARCHITECTURE_OVERVIEW.md  PODCAST_INTEGRATION_DEEPDIVE.md  PODCAST_MATERIALS_INDEX.md  PODCAST_SCRIPT_AND_DEMO.md  PODCAST_SUCCESS_STORY.md  PODCAST_VISUAL_DIAGRAMS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  TEST_RESULTS.md  VAPI_INTEGRATION_GUIDE.md  VOCAL_BRIDGE_SUCCESS.md  VOICE_AGENT_READY.md  config.py  main.py  pyproject.toml  requirements.txt  run_voice_test_server.py  test_vocal_bridge_live.html  test_vocalbridge_complete.py  test_voice_agent.py  voice_cli.py  voice_test_app.py  voice_test_server.py  working_voice_server.py
agents/: __init__.py  base_agent.py  intent_router.py  logistics_agent.py  purchase_retrieval_agent.py  return_classification_agent.py  return_processing_agent.py  tracking_refund_agent.py
database/: __init__.py  mock_db.py
docs/archive/: ARCHITECTURE.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  ReturnFlow_Voice_Agent_PRD_Summary.md
docs/technical/: ENV_SETUP.md  LIVEKIT_SDK_FIX.md  VOCALBRIDGE_INTEGRATION.md  VOCALBRIDGE_STATUS.md
models/: __init__.py  order.py  return_request.py  tracking.py  user.py
services/: __init__.py  orchestrator.py  vocalbridge_client.py  vocalbridge_livekit_client.py  voice_interface.py
tools/obsolete/: diagnose_api_service.py  simple_voice_test.py  test_demo.html  test_voice_demo.py  (+1 more)
(+1 files in other folders)
