[project]
name = "voice-agent"
version = "1.0.0"
description = "ReturnFlow Voice Agent - AI-powered voice agent for processing Amazon & Walmart returns"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/SankarSubbayya/voice_agent"
Repository = "https://github.com/SankarSubbayya/voice_agent"
Documentation = "https://github.com/SankarSubbayya/voice_agent#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tools/testing"]
python_files = "test_*.py"
